[gd_scene load_steps=6 format=3 uid="uid://dwey2803cs42s"]

[ext_resource type="Script" uid="uid://bcytaao75p54s" path="res://Game/UserInterface/mcq_u_i.gd" id="1_aoldv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aoldv"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65cmw"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l3pk3"]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="Theme" id="Theme_aoldv"]
default_font_size = 20
Button/styles/normal = SubResource("StyleBoxFlat_aoldv")
Panel/styles/panel = SubResource("StyleBoxFlat_65cmw")
ProgressBar/styles/background = SubResource("StyleBoxFlat_l3pk3")

[node name="MCQ_U_I" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_aoldv")

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_aoldv")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 2
offset_left = 176.0
offset_top = 62.0
offset_right = 976.0
offset_bottom = 586.0

[node name="PanelContainer" type="PanelContainer" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/VBoxContainer/PanelContainer"]
layout_mode = 2
alignment = 1

[node name="QuestionPanel" type="PanelContainer" parent="Control/Panel/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuestionLabel" type="RichTextLabel" parent="Control/Panel/VBoxContainer/PanelContainer/VBoxContainer/QuestionPanel"]
layout_mode = 2
bbcode_enabled = true
text = "[font_size=35][b]Which Gas is the Lightest?[/b][/font_size]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnswerPanel" type="PanelContainer" parent="Control/Panel/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer/PanelContainer/VBoxContainer/AnswerPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer/PanelContainer/VBoxContainer/AnswerPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="AnswerButton" type="Button" parent="Control/Panel/VBoxContainer/PanelContainer/VBoxContainer/AnswerPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hydrogen"
autowrap_mode = 3

[node name="AnswerButton2" type="Button" parent="Control/Panel/VBoxContainer/PanelContainer/VBoxContainer/AnswerPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Helium"
autowrap_mode = 3

[node name="AnswerButton3" type="Button" parent="Control/Panel/VBoxContainer/PanelContainer/VBoxContainer/AnswerPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Carbon"
autowrap_mode = 3

[node name="AnswerButton4" type="Button" parent="Control/Panel/VBoxContainer/PanelContainer/VBoxContainer/AnswerPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Nitrogen"
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Control/Panel/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
value = 60.0
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CountDownLabel" type="RichTextLabel" parent="Control/Panel/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
bbcode_enabled = true
text = "[font_size=20][b]15.0[/b][/font_size]
"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
